[gd_scene load_steps=23 format=2]

[ext_resource path="res://ui/inventory/item_list.gd" type="Script" id=1]
[ext_resource path="res://ui/inventory/inventory_ui.gd" type="Script" id=2]
[ext_resource path="res://ui/sprites/inventory_character_slot.png" type="Texture" id=3]
[ext_resource path="res://status_sorrow.png" type="Texture" id=4]
[ext_resource path="res://ui/sprites/inventory_bg.png" type="Texture" id=5]
[ext_resource path="res://ui/Negative Effect Font.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ui/sprites/apathy_icon.png" type="Texture" id=8]
[ext_resource path="res://ui/inventory_headers.tres" type="DynamicFont" id=9]
[ext_resource path="res://characters/leaders/apathy/apathy.png" type="Texture" id=11]
[ext_resource path="res://ui/inventory/inventory_slot/inventory_slot.tscn" type="PackedScene" id=13]
[ext_resource path="res://ui/inventory/drop_slot/inventory_drop_slot.tscn" type="PackedScene" id=16]
[ext_resource path="res://ui/inventory_headers_thin.tres" type="DynamicFont" id=18]
[ext_resource path="res://ui/sprites/inventory_character_slot_outline.png" type="Texture" id=19]
[ext_resource path="res://ui/inventory_stats.tres" type="DynamicFont" id=20]
[ext_resource path="res://ui/inventory/equipment_slots/nervous_system/equipment_nervous_system_slot.tscn" type="PackedScene" id=21]
[ext_resource path="res://ui/inventory/equipment_slots/food/equipment_food_slot.tscn" type="PackedScene" id=22]
[ext_resource path="res://ui/inventory/equipment_slots/weapon/equipment_weapon_slot.tscn" type="PackedScene" id=23]
[ext_resource path="res://ui/inventory/equipment_slots/skeleton/equipment_skeleton_slot.tscn" type="PackedScene" id=24]
[ext_resource path="res://ui/inventory/equipment_slots/brain/equipment_brain_slot.tscn" type="PackedScene" id=25]
[ext_resource path="res://ui/inventory/equipment_slots/operating_system/equipment_operating_system_slot.tscn" type="PackedScene" id=26]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 1 )

[node name="InventoryUI" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Rect" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ItemList" type="Control" parent="Rect"]
margin_left = 51.0
margin_top = 130.0
margin_right = 303.0
margin_bottom = 236.0
script = ExtResource( 1 )

[node name="Rows" type="Node2D" parent="Rect/ItemList"]
position = Vector2( -9, 8 )

[node name="Row1" type="Node2D" parent="Rect/ItemList/Rows"]

[node name="Item1" parent="Rect/ItemList/Rows/Row1" instance=ExtResource( 13 )]
margin_right = 28.0
item_list = NodePath("../../..")

[node name="Item2" parent="Rect/ItemList/Rows/Row1" instance=ExtResource( 13 )]
margin_left = 32.0
margin_right = 60.0
item_list = NodePath("../../..")

[node name="Item3" parent="Rect/ItemList/Rows/Row1" instance=ExtResource( 13 )]
margin_left = 64.0
margin_right = 92.0
item_list = NodePath("../../..")

[node name="Item4" parent="Rect/ItemList/Rows/Row1" instance=ExtResource( 13 )]
margin_left = 96.0
margin_right = 124.0
item_list = NodePath("../../..")

[node name="Item5" parent="Rect/ItemList/Rows/Row1" instance=ExtResource( 13 )]
margin_left = 128.0
margin_right = 156.0
item_list = NodePath("../../..")

[node name="Item6" parent="Rect/ItemList/Rows/Row1" instance=ExtResource( 13 )]
margin_left = 160.0
margin_right = 188.0
item_list = NodePath("../../..")

[node name="Item7" parent="Rect/ItemList/Rows/Row1" instance=ExtResource( 13 )]
margin_left = 192.0
margin_right = 220.0
item_list = NodePath("../../..")

[node name="Item8" parent="Rect/ItemList/Rows/Row1" instance=ExtResource( 13 )]
margin_left = 224.0
margin_right = 252.0
item_list = NodePath("../../..")

[node name="Row2" type="Node2D" parent="Rect/ItemList/Rows"]
position = Vector2( 0, 32 )

[node name="Item1" parent="Rect/ItemList/Rows/Row2" instance=ExtResource( 13 )]
item_list = NodePath("../../..")

[node name="Item2" parent="Rect/ItemList/Rows/Row2" instance=ExtResource( 13 )]
margin_left = 32.0
margin_right = 60.0
item_list = NodePath("../../..")

[node name="Item3" parent="Rect/ItemList/Rows/Row2" instance=ExtResource( 13 )]
margin_left = 64.0
margin_right = 92.0
item_list = NodePath("../../..")

[node name="Item4" parent="Rect/ItemList/Rows/Row2" instance=ExtResource( 13 )]
margin_left = 96.0
margin_right = 124.0
item_list = NodePath("../../..")

[node name="Item5" parent="Rect/ItemList/Rows/Row2" instance=ExtResource( 13 )]
margin_left = 128.0
margin_right = 156.0
item_list = NodePath("../../..")

[node name="Item6" parent="Rect/ItemList/Rows/Row2" instance=ExtResource( 13 )]
margin_left = 160.0
margin_right = 188.0
item_list = NodePath("../../..")

[node name="Item7" parent="Rect/ItemList/Rows/Row2" instance=ExtResource( 13 )]
margin_left = 192.0
margin_right = 220.0
item_list = NodePath("../../..")

[node name="Item8" parent="Rect/ItemList/Rows/Row2" instance=ExtResource( 13 )]
margin_left = 224.0
margin_right = 252.0
item_list = NodePath("../../..")

[node name="Row3" type="Node2D" parent="Rect/ItemList/Rows"]
position = Vector2( 0, 64 )

[node name="Item1" parent="Rect/ItemList/Rows/Row3" instance=ExtResource( 13 )]
item_list = NodePath("../../..")

[node name="Item2" parent="Rect/ItemList/Rows/Row3" instance=ExtResource( 13 )]
margin_left = 32.0
margin_right = 60.0

[node name="Item3" parent="Rect/ItemList/Rows/Row3" instance=ExtResource( 13 )]
margin_left = 64.0
margin_right = 92.0
item_list = NodePath("../../..")

[node name="Item4" parent="Rect/ItemList/Rows/Row3" instance=ExtResource( 13 )]
margin_left = 96.0
margin_right = 124.0
item_list = NodePath("../../..")

[node name="Item5" parent="Rect/ItemList/Rows/Row3" instance=ExtResource( 13 )]
margin_left = 128.0
margin_right = 156.0
item_list = NodePath("../../..")

[node name="Item6" parent="Rect/ItemList/Rows/Row3" instance=ExtResource( 13 )]
margin_left = 160.0
margin_right = 188.0
item_list = NodePath("../../..")

[node name="Item7" parent="Rect/ItemList/Rows/Row3" instance=ExtResource( 13 )]
margin_left = 192.0
margin_right = 220.0
item_list = NodePath("../../..")

[node name="EquipButton" type="Button" parent="Rect/ItemList"]
visible = false
self_modulate = Color( 0.109804, 0.964706, 0.0392157, 1 )
margin_left = 29.0
margin_top = 110.0
margin_right = 93.0
margin_bottom = 130.0
mouse_filter = 1
input_pass_on_modal_close_click = false
text = "equip"

[node name="DropButton" type="Button" parent="Rect/ItemList"]
visible = false
self_modulate = Color( 1, 0.329412, 0, 1 )
margin_left = 93.0
margin_top = 110.0
margin_right = 157.0
margin_bottom = 130.0
mouse_filter = 1
input_pass_on_modal_close_click = false
custom_constants/hseparation = 0
text = "drop"

[node name="InventoryDropSlot" parent="Rect/ItemList" instance=ExtResource( 16 )]
position = Vector2( 215, 72 )
z_index = 0

[node name="ActiveCharacter" type="Node2D" parent="."]
position = Vector2( 398, 85 )

[node name="Condition" type="Sprite" parent="ActiveCharacter"]
position = Vector2( -13, -19 )
texture = ExtResource( 8 )

[node name="CharacterName" type="Label" parent="ActiveCharacter"]
margin_left = -3.0
margin_top = -26.0
margin_right = 42.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 9 )
text = "Name"
valign = 1

[node name="Outline" type="Sprite" parent="ActiveCharacter"]
position = Vector2( -51, -5 )
texture = ExtResource( 19 )

[node name="SlotBackground" type="Sprite" parent="ActiveCharacter"]
position = Vector2( -51, -5 )
texture = ExtResource( 3 )

[node name="Character" type="Sprite" parent="ActiveCharacter"]
position = Vector2( -51, -1 )
texture = ExtResource( 11 )
hframes = 20
vframes = 2

[node name="TabContainer" type="TabContainer" parent="ActiveCharacter"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -86.0
margin_top = 56.0
margin_right = 51.0
margin_bottom = 155.0
tabs_visible = false

[node name="Stats" type="Tabs" parent="ActiveCharacter/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Stats" type="Node2D" parent="ActiveCharacter/TabContainer/Stats"]
position = Vector2( 82, -1 )

[node name="Label3" type="Label" parent="ActiveCharacter/TabContainer/Stats/Stats"]
margin_left = -78.0
margin_top = 57.0
margin_right = 18.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 20 )
text = "Concentration  999"
valign = 1

[node name="Label4" type="Label" parent="ActiveCharacter/TabContainer/Stats/Stats"]
margin_left = -78.0
margin_top = 24.0
margin_right = 18.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 20 )
text = "Nervs 999"
valign = 1

[node name="Label5" type="Label" parent="ActiveCharacter/TabContainer/Stats/Stats"]
margin_left = -78.0
margin_top = 35.0
margin_right = 18.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 20 )
text = "Luck 999"
valign = 1

[node name="Label6" type="Label" parent="ActiveCharacter/TabContainer/Stats/Stats"]
margin_left = -78.0
margin_top = 68.0
margin_right = 18.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 20 )
text = "Psychological damage 999"
valign = 1

[node name="Label8" type="Label" parent="ActiveCharacter/TabContainer/Stats/Stats"]
margin_left = -78.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 20 )
text = "Reflexes 999"
valign = 1

[node name="Label9" type="Label" parent="ActiveCharacter/TabContainer/Stats/Stats"]
margin_left = -78.0
margin_top = 13.0
margin_right = 18.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 20 )
text = "Health 999"
valign = 1

[node name="Label10" type="Label" parent="ActiveCharacter/TabContainer/Stats/Stats"]
margin_left = -78.0
margin_top = 46.0
margin_right = 18.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 20 )
text = "Lethality  999"
valign = 1

[node name="Equipment" type="Tabs" parent="ActiveCharacter/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="EquipmentBrainSlot" parent="ActiveCharacter/TabContainer/Equipment" instance=ExtResource( 25 )]
position = Vector2( 4, 11 )
group = "equipment_slot"
equipment_type = "brain"

[node name="EquipmentSkeletonSlot" parent="ActiveCharacter/TabContainer/Equipment" instance=ExtResource( 24 )]
position = Vector2( 36, 11 )
group = "equipment_slot"

[node name="EquipmentOperatingSystemSlot" parent="ActiveCharacter/TabContainer/Equipment" instance=ExtResource( 26 )]
position = Vector2( 68, 11 )
group = "equipment_slot"
equipment_type = "operating_system"

[node name="EquipmentNervousSystemSlot" parent="ActiveCharacter/TabContainer/Equipment" instance=ExtResource( 21 )]
position = Vector2( 100, 11 )
group = "equipment_slot"
equipment_type = "nervous_system"

[node name="EquipmentWeaponSlot" parent="ActiveCharacter/TabContainer/Equipment" instance=ExtResource( 23 )]
position = Vector2( 36, 43 )
group = "equipment_slot"

[node name="EquipmentFoodSlot" parent="ActiveCharacter/TabContainer/Equipment" instance=ExtResource( 22 )]
position = Vector2( 68, 43 )
group = "equipment_slot"
equipment_type = "food"

[node name="StatsButton" type="Button" parent="ActiveCharacter"]
margin_left = -3.0
margin_top = 39.0
margin_right = 50.0
margin_bottom = 61.0
focus_mode = 0
theme = SubResource( 3 )
enabled_focus_mode = 0
flat = true

[node name="Label" type="Label" parent="ActiveCharacter/StatsButton"]
margin_right = 53.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 18 )
text = "Stats"
align = 1
valign = 1

[node name="EquipmentButton" type="Button" parent="ActiveCharacter"]
margin_left = -86.0
margin_top = 39.0
margin_right = -3.0
margin_bottom = 61.0
focus_mode = 0
theme = SubResource( 3 )
enabled_focus_mode = 0
flat = true

[node name="Label2" type="Label" parent="ActiveCharacter/EquipmentButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -11.0
margin_right = 41.5
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 18 )
text = "Equipment"
align = 1
valign = 1

[node name="Characters" type="Node2D" parent="."]
position = Vector2( 0, 5 )

[node name="Character1" type="Node2D" parent="Characters"]
position = Vector2( 71, 67 )

[node name="SlotBackground" type="Sprite" parent="Characters/Character1"]
position = Vector2( 1, 8 )
texture = ExtResource( 3 )

[node name="Character" type="Sprite" parent="Characters/Character1"]
position = Vector2( 1, 12 )
texture = ExtResource( 11 )
hframes = 20
vframes = 2

[node name="Control" type="Button" parent="Characters/Character1"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -26.0
margin_top = -19.0
margin_right = 28.0
margin_bottom = 35.0

[node name="Outline" type="Sprite" parent="Characters/Character1"]
position = Vector2( 1, 8 )
texture = ExtResource( 19 )

[node name="Character2" type="Node2D" parent="Characters"]
position = Vector2( 135, 67 )

[node name="SlotBackground" type="Sprite" parent="Characters/Character2"]
position = Vector2( 1, 8 )
texture = ExtResource( 3 )

[node name="Character" type="Sprite" parent="Characters/Character2"]
position = Vector2( 1, 12 )
texture = ExtResource( 11 )
hframes = 20
vframes = 2

[node name="Control" type="Button" parent="Characters/Character2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -26.0
margin_top = -19.0
margin_right = 28.0
margin_bottom = 35.0

[node name="Outline" type="Sprite" parent="Characters/Character2"]
position = Vector2( 1, 8 )
texture = ExtResource( 19 )

[node name="Character3" type="Node2D" parent="Characters"]
position = Vector2( 199, 67 )

[node name="SlotBackground" type="Sprite" parent="Characters/Character3"]
position = Vector2( 1, 8 )
texture = ExtResource( 3 )

[node name="Character" type="Sprite" parent="Characters/Character3"]
position = Vector2( 1, 12 )
texture = ExtResource( 11 )
hframes = 20
vframes = 2

[node name="Control" type="Button" parent="Characters/Character3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -26.0
margin_top = -19.0
margin_right = 28.0
margin_bottom = 35.0

[node name="Outline" type="Sprite" parent="Characters/Character3"]
position = Vector2( 1, 8 )
texture = ExtResource( 19 )

[node name="Character4" type="Node2D" parent="Characters"]
position = Vector2( 263, 67 )

[node name="SlotBackground" type="Sprite" parent="Characters/Character4"]
position = Vector2( 1, 8 )
texture = ExtResource( 3 )

[node name="Character" type="Sprite" parent="Characters/Character4"]
position = Vector2( 1, 12 )
texture = ExtResource( 11 )
hframes = 20
vframes = 2

[node name="Control" type="Button" parent="Characters/Character4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -26.0
margin_top = -19.0
margin_right = 28.0
margin_bottom = 35.0

[node name="Outline" type="Sprite" parent="Characters/Character4"]
position = Vector2( 1, 8 )
texture = ExtResource( 19 )

[node name="Cursor" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Cursor"]
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 32.0
margin_top = 5.0
margin_right = 352.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 18 )
text = "Team info:    HP: 100/100   Level: 10   XP: 100/110 "
valign = 1
